--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,6 +21,11 @@ jobs:
       with:
         go-version: '1.23'
 
+    - name: Install dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libxrandr-dev libx11-dev
+
     - name: Build
       run: go build -v .
 
