--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y libxrandr-dev libx11-dev
+        sudo apt-get install -y libxrandr-dev libx11-dev libgl1-mesa-dev xorg-dev
 
     - name: Build
       run: go build -v .
