--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,7 +27,12 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y libxrandr-dev libx11-dev libgl1-mesa-dev xorg-dev
+        sudo apt-get install -y libxrandr-dev libx11-dev libgl1-mesa-dev xorg-dev xvfb
+
+    - name: Start Xvfb
+      run: |
+        Xvfb :99 -screen 0 1024x768x16 &
+        export DISPLAY=:99
 
     - name: Build
       run: go build -v .
