--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y libxrandr-dev libx11-dev libgl1-mesa-dev xorg-dev xvfb
+        sudo apt-get install -y libxrandr-dev libx11-dev libgl1-mesa-dev xorg-dev xvfb libasound2-dev
 
     - name: Start Xvfb
       run: |
