--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,14 +33,6 @@ jobs:
       run: |
         GOOS=windows GOARCH=amd64 go build -v -o myapp.exe .
 
-    - name: Upload Release Asset
-      uses: actions/upload-release-asset@v1
-      with:
-        upload_url: ${{ github.event.release.upload_url }}
-        asset_path: ./myapp.exe
-        asset_name: myapp.exe
-        asset_content_type: application/octet-stream
-
   create_release:
     needs: build
     runs-on: ubuntu-latest
@@ -55,3 +47,11 @@ jobs:
         release_name: Release ${{ github.ref }}
         draft: false
         prerelease: false
+
+    - name: Upload Release Asset
+      uses: actions/upload-release-asset@v1
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./myapp.exe
+        asset_name: myapp.exe
+        asset_content_type: application/octet-stream
