--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,16 +26,18 @@ jobs:
       run: |
         Xvfb :99 -screen 0 1024x768x16 &
         echo "Xvfb started"
-        export DISPLAY=:99
-        echo "DISPLAY set to $DISPLAY"
+        echo "DISPLAY=:99" >> $GITHUB_ENV
 
     - name: Build for Windows
+      env:
+        DISPLAY: ${{ env.DISPLAY }}
       run: |
         GOOS=windows GOARCH=amd64 go build -v -o myapp.exe .
 
   create_release:
     needs: build
     runs-on: ubuntu-latest
+
     steps:
     - name: Create GitHub Release
       id: create_release
@@ -43,17 +45,15 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
+        tag_name: ${{ github.ref_name }}
+        release_name: Release ${{ github.ref_name }}
         draft: false
         prerelease: false
-      outputs:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
 
     - name: Upload Release Asset
       uses: actions/upload-release-asset@v1
       with:
-        upload_url: ${{ needs.create_release.outputs.upload_url }}
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./myapp.exe
         asset_name: myapp.exe
         asset_content_type: application/octet-stream
