--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,6 +50,9 @@ jobs:
         draft: false
         prerelease: false
 
+    - name: Debug Create Release Outputs
+      run: echo "Upload URL: ${{ steps.create_release.outputs.upload_url }}"
+
     - name: Upload Release Asset
       uses: actions/upload-release-asset@v1
       with:
